SQ fixes